middleware checks, security updates

--- a/travelSite/config.env
+++ b/travelSite/config.env
@@ -4,3 +4,10 @@ USER=testing
 PASSWORD=789564
 DATABASE_GLOBAL=mongodb://localhost:27017/travelsite
 DATABASE_LOCAL=mongodb://localhost:27017/travelsite
+JWT_SECRET=my-ultra-secure-jwt-secret-key-for-tours
+JWT_EXPIRES_IN=90d
+JWT__COOKIE_EXPIRES_IN=90d
+EMAIL_DEV_USERNAME=5d6e682ee0b2ea
+EMAIL_DEV_PASSWORD=5a09f31676bd1f
+EMAIL_DEV_HOST=smtp.mailtrap.io
+EMAIL_DEV_PORT=2525
