--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "mongoose": "^6.4.0"
+    "express-rate-limit": "^6.4.0",
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.5"
   }
 }
