--- a/travelSite/package.json
+++ b/travelSite/package.json
@@ -4,24 +4,33 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":">=10.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
-    "start:dev": "nodemon server.js --import",
+    "start:dev": "nodemon server.js ",
     "start:prod": "NODE_ENV= production nodemon server.js",
-    "debug": "ndb dev-data/data/import_dev_data.js --import",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "ndb server.js",
+    "test": "DEBUG=express:* node inspect  server.js "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.7.5",
     "slugify": "^1.6.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
@@ -32,7 +41,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
-    
     "prettier": "^2.7.1"
   }
 }
