--- a/travelSite/config.env
+++ b/travelSite/config.env
@@ -11,3 +11,8 @@ EMAIL_DEV_USERNAME=5d6e682ee0b2ea
 EMAIL_DEV_PASSWORD=5a09f31676bd1f
 EMAIL_DEV_HOST=smtp.mailtrap.io
 EMAIL_DEV_PORT=2525
+
+EMAIL_FROM=hello@jonas.io
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
