--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express-rate-limit": "^6.4.0",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5"
   }
 }
